Closed Bug 1912404 Opened 1 year ago Closed 1 year ago

bevyengine.org - The animation is not displayed

Categories

(Web Compatibility :: Site Reports, defect, P1)

Firefox 131
Desktop
Linux

Tracking

(firefox-esr115 wontfix, firefox-esr128 fixed, firefox129 wontfix, firefox130 wontfix, firefox131 wontfix, firefox132 fixed)

RESOLVED FIXED
Tracking Status
firefox-esr115 --- wontfix
firefox-esr128 --- fixed
firefox129 --- wontfix
firefox130 --- wontfix
firefox131 --- wontfix
firefox132 --- fixed

People

(Reporter: railioaie, Assigned: jgilbert)

References

(Regression, )

Details

(Keywords: regression, webcompat:platform-bug, webcompat:site-report)

User Story

platform:windows,mac,linux,android
impact:site-broken
configuration:general
affects:all
branch:release
diagnosis-team:graphics

Attachments

(2 files)

Environment:
Operating System: Linux
Firefox version: Firefox Nightly 131.0a1 (2024-08-08) / Firefox Release 129.0

Preconditions:
Clean profile

Steps to reproduce:

  1. Navigate on https://bevyengine.org/examples/animation/animated-fox/
  2. Observe the page

Expected Behavior:
The animation is displayed correctly

Actual Behavior:
The animation is not displayed

Notes:

  • Reproduces regardless of the status of ETP
  • Reproduces in Firefox Nightly, Firefox Release
  • Does not reproduce in Chrome

See also the relevant issue on Bevy where a lot of users running into this reported their environment.

To summarize the Bevy issue:

As of Firefox 128 Bevy's 3d renderer no longer works with WebGL2 on Linux with AMD Mesa drivers. It appears that Intel mesa drivers and LLVMpipe may also be broken, but those aren't fully confirmed (so this seems to be a Linux Mesa drivers + Firefox 128+ specific issue). There was a recent report that it's also broken as of a recent Firefox 115 ESR release.

I asked about the error message on the wgpu matrix
ERROR Shader compilation failed: ERROR: 0:? : '' : Total size of declared private variables exceeds implementation-defined limit
and was told that this was the relevant code https://searchfox.org/mozilla-central/source/gfx/angle/checkout/src/compiler/translator/ValidateTypeSizeLimitations.cpp#114 and https://searchfox.org/mozilla-central/source/dom/canvas/WebGLShaderValidator.cpp#205

According to the GitHub thread, this is a regression from bug 1888340, so maybe the graphics team can look into this. Kelsey, do you have an idea?

Severity: -- → S2
User Story: (updated)
Flags: needinfo?(jgilbert)
Priority: P3 → P1
Regressions: CVE-2024-6600

I will look

Assignee: nobody → jgilbert
Flags: needinfo?(jgilbert)

Kelsey, did you investigate this regression? Thanks

Flags: needinfo?(jgilbert)

We can test this on any machine by manually setting webgl.glsl.max_private_var_size_in_bytes.
It looks like the shader requires 69604 here. (69604 renders fine, whereas 69603 has a shader error)

Flags: needinfo?(jgilbert)

The limit on Mesa is 4*4*1024 -> 16384.

See Also: → CVE-2023-6856
Pushed by jgilbert@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/989928683ab6 Remove unneeded 16kiB var limit for Mesa. r=gfx-reviewers,lsalzman
Status: NEW → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED

:jgilbert if you want to uplift this to 131, just a reminder that tomorrow is the last day to request an uplift.

Flags: needinfo?(jgilbert)

This grafts cleanly to both Beta and ESR128. Probably worth nominating for both.

Flags: needinfo?(jgilbert)

Comment on attachment 9424471 [details]
Bug 1912404 - Remove unneeded 16kiB var limit for Mesa.

ESR Uplift Approval Request

  • If this is not a sec:{high,crit} bug, please state case for ESR consideration: This limit is low enough that it prevents reasonable content from running, causing websites not to work in Firefox.
  • User impact if declined: This limit is low enough that it prevents reasonable content from running, causing websites not to work in Firefox.
  • Fix Landed on Version: 132
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Low risk because it doesn't seem like we ever needed this limit, and we know that no one else has this same limit because the content runs elsewhere. (e.g. Chrome)
Attachment #9424471 - Flags: approval-mozilla-esr128?
Duplicate of this bug: 1920147

Comment on attachment 9424471 [details]
Bug 1912404 - Remove unneeded 16kiB var limit for Mesa.

Approved for 128.4esr.

Attachment #9424471 - Flags: approval-mozilla-esr128? → approval-mozilla-esr128+
See Also: → 1922497
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: