Bug 1912404 - Remove unneeded 16kiB var limit for Mesa. r=gfx-reviewers,lsalzman a=RyanVM

Differential Revision: https://phabricator.services.mozilla.com/D222010